--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
     "@react-navigation/native": "^6.0.2",
+    "boring-avatars": "^1.10.1",
     "expo": "~50.0.8",
     "expo-font": "~11.10.3",
     "expo-linking": "~6.2.2",
@@ -31,6 +32,7 @@
     "react-native-reanimated": "^3.7.1",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
+    "react-native-svg": "^15.1.0",
     "react-native-web": "~0.19.6",
     "tailwindcss": "^3.4.1"
   },
@@ -39,6 +41,7 @@
     "@types/react": "~18.2.45",
     "jest": "^29.2.1",
     "jest-expo": "~50.0.2",
+    "react-native-svg-transformer": "^1.3.0",
     "react-test-renderer": "18.2.0",
     "typescript": "^5.1.3"
   },
