--- a/package.json
+++ b/package.json
@@ -32,9 +32,12 @@
     "react-native-reanimated": "^3.7.1",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
+    "react-native-super-grid": "^5.0.0",
     "react-native-svg": "^15.1.0",
     "react-native-web": "~0.19.6",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "validator": "^13.11.0",
+    "@react-native-async-storage/async-storage": "1.21.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
